--- a/feladat.html
+++ b/feladat.html
@@ -349,3 +349,66 @@ Australia_StroopwafelInvasionInNorlane, <b>updated</b>, 59, <a href="https://www
 Netherlands_StroopwafelInvasionInOspel, <b>updated</b>, 67, <a href="https://www.munzee.com/map/u1h5gdgny/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_StroopwafelInvasionInOspel.json" target="_blank">json</a><br />
 UnitedKingdom_StroopwafelInvasionInThringstone, <b>updated</b>, 55, <a href="https://www.munzee.com/map/gcrh0updg/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInThringstone.json" target="_blank">json</a><br />
 Australia_StroopwafelInvasionInWonthaggi, <b>updated</b>, 60, <a href="https://www.munzee.com/map/r1ps2ge1w/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInWonthaggi.json" target="_blank">json</a><br />
+Netherlands_StroopwafelInvasionInArnhem kihagyva (100%), <br />
+Germany_StroopwafelInvasionInBerlin kihagyva (100%), <br />
+Canada_StroopwafelInvasionInBrossard kihagyva (100%), <br />
+Australia_StroopwafelInvasionInBrownsPlains kihagyva (100%), <br />
+Germany_StroopwafelInvasionInChemnitz kihagyva (100%), <br />
+USA_StroopwafelInvasionInDesertLodge kihagyva (100%), <br />
+USA_StroopwafelInvasionInEscondido kihagyva (100%), <br />
+Canada_StroopwafelInvasionInGeorgetown kihagyva (100%), <br />
+USA_StroopwafelInvasionInGlenOaks kihagyva (100%), <br />
+Sweden_StroopwafelInvasionInGotenborg kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGouda kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGroningen kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInHoofddorp kihagyva (100%), <br />
+USA_StroopwafelInvasionInMHQ kihagyva (100%), <br />
+Australia_StroopwafelInvasionInMorayfield kihagyva (100%), <br />
+Australia_StroopwafelInvasionInOnkaparingaHills kihagyva (100%), <br />
+Australia_StroopwafelInvasionInPerth kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInPlympton kihagyva (100%), <br />
+USA_StroopwafelInvasionInRaleigh kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInBedford kihagyva (100%), <br />
+USA_MHQBash4Casino kihagyva (100%), <br />
+USA_MHQV4Pin kihagyva (100%), <br />
+USA_ZeeKnight, not updated, 0.0<br />
+USA_MichaelMyersHalloween, not updated, 0.0<br />
+USA_MunzeeLogoHistory2011, not updated, 0.0<br />
+USA_MunzeeLogoHistory2013 kihagyva (100%), <br />
+USA_MunzeeLogoHistory2014, not updated, 0.0<br />
+USA_MunzeeLogoHistory2015, not updated, 0.0<br />
+USA_PiratesFlag kihagyva (100%), <br />
+USA_Zelda, not updated, 0.0<br />
+USA_TeenageMutantNinjaTurtles, not updated, 0.0<br />
+Germany_FBombBerlin kihagyva (100%), <br />
+Hungary_FBombBudapest kihagyva (100%), <br />
+USA_FBombCedarRapids kihagyva (100%), <br />
+Denmark_FBombHammel kihagyva (100%), <br />
+USA_FBombMcKinney kihagyva (100%), <br />
+USA_FBombTampa kihagyva (100%), <br />
+USA_RoverPin, not updated, 0.0<br />
+USA_EmeraldInAnchorage kihagyva (100%), <br />
+USA_EmeraldInChesterfield kihagyva (100%), <br />
+USA_EmeraldInMcKinney kihagyva (100%), <br />
+Australia_EmeraldInMelbourne kihagyva (100%), <br />
+UnitedKingdom_EmeraldInGreenwich kihagyva (100%), <br />
+Australia_EmeraldInSydney kihagyva (100%), <br />
+BosniaHerzegovina_PanonskaJezeraTuzla, not updated, 0.0<br />
+Serbia_JapanseMaple kihagyva (100%), <br />
+Greece_TheLighthouseOfChania kihagyva (100%), <br />
+Jersey_JerzeeClan, not updated, 0.0<br />
+Jersey_JerseyColorPaw, not updated, 0.0<br />
+Jersey_StOuen kihagyva (100%), <br />
+Portugal_MadeiraMonumental kihagyva (100%), <br />
+Portugal_LargoDaPaz kihagyva (100%), <br />
+Portugal_1MadeiraSapphiresTwin kihagyva (100%), <br />
+Portugal_Portinho kihagyva (100%), <br />
+Croatia_CroatiaLocketHeart, not updated, 0.0<br />
+Greece_Zakynthos, not updated, 0.0<br />
+Portugal_PortoNovoHighVoltage, not updated, 0.0<br />
+Portugal_HighVoltageMadeiraIslandFirst kihagyva (100%), <br />
+Portugal_HighVoltageMadeiraIslandBlack kihagyva (100%), <br />
+UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
+France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
+Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
+USA_MOAChristmasCard, <b>updated</b>, 412, <a href="https://www.munzee.com/map/9zvxjfwnt/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAChristmasCard.json" target="_blank">json</a> <b>100%</b><br />
