--- a/feladat.html
+++ b/feladat.html
@@ -412,3 +412,19 @@ UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
 France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
 Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
 USA_MOAChristmasCard, <b>updated</b>, 412, <a href="https://www.munzee.com/map/9zvxjfwnt/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAChristmasCard.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+Hungary_city_Tatabanya, <b>updated</b>, <a href="https://www.munzee.com/map/u2mndxhne/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Tatabanya.json" target="_blank">json</a><br />
+----felhasználók<br />
+----témák<br />
+World_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/World_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Australia_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/r1ps2ge1w/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Canada_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/c28xfy4xj/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Germany_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u33e0rucx/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Hungary_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Netherlands_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u15rfnm03/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Sweden_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u67hj4225/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Sweden_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+UnitedKingdom_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/gcnhxpp6s/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+USA_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/9vgkbm7fn/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+<b>stop</b> - 2022.12.23 07:09:37<br />
+összesen 1865<br />
