--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.12.24 01:10:08<br />
+<b>start</b> - 2022.12.25 01:10:10<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970508<br />
@@ -45,7 +45,7 @@ UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.0<br />
 USA_Turtle, not updated, 0.4409171075837719<br />
 Finland_BioOtokka, not updated, 0.0<br />
-Canada_GatineauFMGGarden, <b>updated</b>, 561, <a href="https://www.munzee.com/map/f244tegjx/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_GatineauFMGGarden.json" target="_blank">json</a><br />
+Canada_GatineauFMGGarden, not updated, 0.0<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
 Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
 Switzerland_GiddyUpGo, not updated, 1.0<br />
@@ -54,7 +54,7 @@ Hungary_Evolution, not updated, 0.8333333333333286<br />
 Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
 USA_OfficerDown, not updated, 0.0<br />
 Hungary_Brigetio, not updated, 0.3846153846153797<br />
-Hungary_GoatInKecskemet, not updated, 0.46999999999999886<br />
+Hungary_GoatInKecskemet, not updated, 0.6999999999999886<br />
 Hungary_TaskasSmiley, not updated, 0.0<br />
 Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
 Slovakia_FlagOfSlovakia, not updated, 0.09999999999999787<br />
@@ -64,7 +64,7 @@ Hungary_GyulaCastle, not updated, 0.0<br />
 USA_2019TexasChallenge, not updated, 0.28999999999999915<br />
 USA_FortMyersAlligator, not updated, 0.0<br />
 Denmark_TheSwanInHilleroed, not updated, 0.0<br />
-Hungary_CsepelObol, not updated, 0.0<br />
+Hungary_CsepelObol, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 0<br />
 Hungary_CsepelVasEsFemmuvekLogo, not updated, 0.0<br />
 Czechia_KMZNAK, not updated, 0.11999999999999034<br />
 Luxembourg_LuxembourgFlag, not updated, 0.0<br />
@@ -235,7 +235,7 @@ Hungary_60Flat kihagyva (100%), <br />
 UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
 UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
 UnitedKingdom_JustSmileLondon, not updated, 0.0<br />
-UnitedKingdom_HeathrowFlatSquares, not updated, 0.0<br />
+UnitedKingdom_HeathrowFlatSquares, not updated, 0.519999999999996<br />
 UnitedKingdom_LondonUnderground, not updated, 0.0<br />
 UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
 UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
@@ -412,9 +412,5 @@ UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
 France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
 Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
 USA_MOAChristmasCard kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2022.12.24 01:33:13<br />
-összesen 1385<br />
+<b>stop</b> - 2022.12.25 01:26:08<br />
+összesen 958<br />
