--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.12.26 01:10:08<br />
+<b>start</b> - 2022.12.27 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970508<br />
@@ -43,7 +43,7 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.0<br />
-USA_Turtle, not updated, 0.4409171075837719<br />
+USA_Turtle, not updated, 0.5291005291005249<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.4399999999999977<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
@@ -149,10 +149,10 @@ UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle kihagyva (100%), <br />
-USA_LightningBoltInSapphire, <b>updated</b>, 325, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a> <b>100%</b><br />
+USA_LightningBoltInSapphire kihagyva (100%), <br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.19999999999998863<br />
 Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, not updated, 0.581395348837205<br />
+Finland_TampereElectric, not updated, 0.664451827242516<br />
 USA_MontgomeryBaseball kihagyva (100%), <br />
 USA_HanksBoots, not updated, 0.0<br />
 USA_ColorTheZoo, not updated, 0.0<br />
@@ -179,7 +179,7 @@ Germany_BerlinMunzeePin, not updated, 0.07000000000000028<br />
 Germany_DiamantBerlin, not updated, 0.0<br />
 Germany_BerlinBear, not updated, 0.0<br />
 Germany_HonowWappen, not updated, 0.3355704697986539<br />
-Canada_GatineauEvo, not updated, 0.38000000000000256<br />
+Canada_GatineauEvo, not updated, 0.759999999999998<br />
 Germany_ColorsBonn kihagyva (100%), <br />
 Germany_BTHVN2020 kihagyva (100%), <br />
 Canada_GatineauScarletTulip kihagyva (100%), <br />
@@ -412,9 +412,5 @@ UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
 France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
 Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
 USA_MOAChristmasCard kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2022.12.26 01:30:16<br />
-összesen 1207<br />
+<b>stop</b> - 2022.12.27 01:26:10<br />
+összesen 961<br />
