--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2022.12.29 01:10:09<br />
+<b>start</b> - 2022.12.30 01:10:10<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970508<br />
 USA_PrattvilleTrillium, not updated, 0.9199999999999875<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.5399999999999991<br />
-Hungary_VotiveChurch, not updated, -38.61000000000001<br />
+Hungary_VotiveChurch, not updated, -38.74000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.0<br />
@@ -273,7 +273,7 @@ Canada_LizzysUnicorn kihagyva (100%), <br />
 Canada_JeffsFarm kihagyva (100%), <br />
 UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
 Germany_JohnTheFab41 kihagyva (100%), <br />
-Germany_RingoTheFab4, <b>updated</b>, 285, <a href="https://www.munzee.com/map/u0w7yn1s8/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_RingoTheFab4.json" target="_blank">json</a><br />
+Germany_RingoTheFab4, not updated, 0.0<br />
 Germany_GeorgeTheFab42, not updated, 0.9299999999999997<br />
 Germany_PaulTheFab43, not updated, 0.9299999999999926<br />
 Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
@@ -412,10 +412,5 @@ UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
 France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
 Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
 USA_MOAChristmasCard kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-----témák<br />
-Germany_topic_TheFABInTubingen, <b>updated</b>, <a href="https://www.munzee.com/map/u0w7vzm9n/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_topic_TheFABInTubingen.json" target="_blank">json</a><br />
-<b>stop</b> - 2022.12.29 01:30:38<br />
-összesen 1229<br />
+<b>stop</b> - 2022.12.30 01:25:55<br />
+összesen 945<br />
