--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.12.30 01:10:10<br />
+<b>start</b> - 2022.12.30 08:48:52<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970508<br />
@@ -412,5 +412,4 @@ UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
 France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
 Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
 USA_MOAChristmasCard kihagyva (100%), <br />
-<b>stop</b> - 2022.12.30 01:25:55<br />
-összesen 945<br />
+Germany_AreYouXZeePerienced, <b>updated</b>, 1082, <a href="https://www.munzee.com/map/u0weber3n/14.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_AreYouXZeePerienced.json" target="_blank">json</a><br />
