--- a/feladat.html
+++ b/feladat.html
@@ -413,3 +413,4 @@ France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
 Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
 USA_MOAChristmasCard kihagyva (100%), <br />
 Germany_AreYouXZeePerienced, <b>updated</b>, 1082, <a href="https://www.munzee.com/map/u0weber3n/14.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_AreYouXZeePerienced.json" target="_blank">json</a><br />
+Germany_MixedGardenRT, <b>updated</b>, 384, <a href="https://www.munzee.com/map/u0weck999/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_MixedGardenRT.json" target="_blank">json</a> <b>100%</b><br />
