--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.12.30 08:48:52<br />
+<b>start</b> - 2022.12.30 11:28:52<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970508<br />
@@ -412,11 +412,12 @@ UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
 France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
 Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
 USA_MOAChristmasCard kihagyva (100%), <br />
-Germany_AreYouXZeePerienced, <b>updated</b>, 1082, <a href="https://www.munzee.com/map/u0weber3n/14.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_AreYouXZeePerienced.json" target="_blank">json</a><br />
-Germany_MixedGardenRT, <b>updated</b>, 384, <a href="https://www.munzee.com/map/u0weck999/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_MixedGardenRT.json" target="_blank">json</a> <b>100%</b><br />
-Germany_AppenzellerSennenhundRT, <b>updated</b>, 1221, <a href="https://www.munzee.com/map/u0wecspcn/14.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_AppenzellerSennenhundRT.json" target="_blank">json</a><br />
-Germany_PatchworkRT, <b>updated</b>, 1020, <a href="https://www.munzee.com/map/u0wec7dyv/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_PatchworkRT.json" target="_blank">json</a><br />
-Germany_FlatsAppenzellerRT, <b>updated</b>, 1902, <a href="https://www.munzee.com/map/u0wecspcn/14.51" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_FlatsAppenzellerRT.json" target="_blank">json</a><br />
-Germany_WeddingDay, <b>updated</b>, 257, <a href="https://www.munzee.com/map/u0webcwke/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_WeddingDay.json" target="_blank">json</a> <b>100%</b><br />
-Germany_SportparkEvolutionsRT1, <b>updated</b>, 406, <a href="https://www.munzee.com/map/u0wec15u9/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_SportparkEvolutionsRT1.json" target="_blank">json</a><br />
-Germany_SportparkEvolutionsRT2, <b>updated</b>, 356, <a href="https://www.munzee.com/map/u0wec1kg4/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_SportparkEvolutionsRT2.json" target="_blank">json</a><br />
+Germany_AreYouXZeePerienced, not updated, 0.0<br />
+Germany_MixedGardenRT kihagyva (100%), <br />
+Germany_AppenzellerSennenhundRT, not updated, 0.0<br />
+Germany_PatchworkRT, not updated, 0.0<br />
+Germany_FlatsAppenzellerRT, not updated, 0.0<br />
+Germany_WeddingDay kihagyva (100%), <br />
+Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
+Germany_SportparkEvolutionsRT2, not updated, 0.28999999999999204<br />
+Germany_Peace, <b>updated</b>, 3258, <a href="https://www.munzee.com/map/u0we8z9mh/14.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_Peace.json" target="_blank">json</a><br />
