--- a/feladat.html
+++ b/feladat.html
@@ -421,3 +421,5 @@ Germany_WeddingDay kihagyva (100%), <br />
 Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
 Germany_SportparkEvolutionsRT2, not updated, 0.28999999999999204<br />
 Germany_Peace, <b>updated</b>, 3258, <a href="https://www.munzee.com/map/u0we8z9mh/14.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_Peace.json" target="_blank">json</a><br />
+Germany_PatchworkDusslingen, not updated, 0.0<br />
+USA_MunzeeMania2019, <b>updated</b>, 532, <a href="https://www.munzee.com/map/9zvwzxy7x/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MunzeeMania2019.json" target="_blank">json</a><br />
