--- a/feladat.html
+++ b/feladat.html
@@ -424,3 +424,4 @@ Germany_Peace, <b>updated</b>, 3258, <a href="https://www.munzee.com/map/u0we8z9
 Germany_PatchworkDusslingen, not updated, 0.0<br />
 USA_MunzeeMania2019, <b>updated</b>, 532, <a href="https://www.munzee.com/map/9zvwzxy7x/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MunzeeMania2019.json" target="_blank">json</a><br />
 USA_MOADwarfLeprechaun, <b>updated</b>, 283, <a href="https://www.munzee.com/map/9zvxn73ke/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOADwarfLeprechaun.json" target="_blank">json</a> <b>100%</b><br />
+USA_MOAPenguin, <b>updated</b>, 367, <a href="https://www.munzee.com/map/9zvxn5vvf/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAPenguin.json" target="_blank">json</a> <b>100%</b><br />
