--- a/feladat.html
+++ b/feladat.html
@@ -427,3 +427,4 @@ USA_MOADwarfLeprechaun, <b>updated</b>, 283, <a href="https://www.munzee.com/map
 USA_MOAPenguin, <b>updated</b>, 367, <a href="https://www.munzee.com/map/9zvxn5vvf/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAPenguin.json" target="_blank">json</a> <b>100%</b><br />
 USA_MOANutcracker, <b>updated</b>, 174, <a href="https://www.munzee.com/map/9zvxnhr2r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOANutcracker.json" target="_blank">json</a> <b>100%</b><br />
 USA_IceCreamEagan, <b>updated</b>, 63, <a href="https://www.munzee.com/map/9zvxpct2h/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_IceCreamEagan.json" target="_blank">json</a> <b>100%</b><br />
+Germany_AdlerKatapulte, <b>updated</b>, 132, <a href="https://www.munzee.com/map/u0ws6ed47/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_AdlerKatapulte.json" target="_blank">json</a><br />
