--- a/feladat.html
+++ b/feladat.html
@@ -434,3 +434,4 @@ USA_GingerbreadMan_Edina, <b>updated</b>, 848, <a href="https://www.munzee.com/m
 USA_NEOneAlien, <b>updated</b>, 230, <a href="https://www.munzee.com/map/cbj8nmyg8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_NEOneAlien.json" target="_blank">json</a><br />
 USA_ComoEvoFlowers, <b>updated</b>, 207, <a href="https://www.munzee.com/map/9zvzb5fqd/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ComoEvoFlowers.json" target="_blank">json</a> <b>100%</b><br />
 USA_WitchHat, <b>updated</b>, 150, <a href="https://www.munzee.com/map/9zvxyf7hg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WitchHat.json" target="_blank">json</a><br />
+USA_LRTEVOTrain, <b>updated</b>, 481, <a href="https://www.munzee.com/map/9zvz8rvx1/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LRTEVOTrain.json" target="_blank">json</a><br />
