--- a/feladat.html
+++ b/feladat.html
@@ -437,3 +437,4 @@ USA_WitchHat, <b>updated</b>, 150, <a href="https://www.munzee.com/map/9zvxyf7hg
 USA_LRTEVOTrain, <b>updated</b>, 481, <a href="https://www.munzee.com/map/9zvz8rvx1/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LRTEVOTrain.json" target="_blank">json</a><br />
 USA_JackOZEEacula, <b>updated</b>, 199, <a href="https://www.munzee.com/map/9zvxx1c0y/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_JackOZEEacula.json" target="_blank">json</a> <b>100%</b><br />
 USA_Minnesota, <b>updated</b>, 424, <a href="https://www.munzee.com/map/9zvxqwvpp/14.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Minnesota.json" target="_blank">json</a> <b>100%</b><br />
+USA_MinnesotaMoose, <b>updated</b>, 376, <a href="https://www.munzee.com/map/9zvxqxry4/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MinnesotaMoose.json" target="_blank">json</a> <b>100%</b><br />
