--- a/feladat.html
+++ b/feladat.html
@@ -439,3 +439,4 @@ USA_JackOZEEacula, <b>updated</b>, 199, <a href="https://www.munzee.com/map/9zvx
 USA_Minnesota, <b>updated</b>, 424, <a href="https://www.munzee.com/map/9zvxqwvpp/14.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Minnesota.json" target="_blank">json</a> <b>100%</b><br />
 USA_MinnesotaMoose, <b>updated</b>, 376, <a href="https://www.munzee.com/map/9zvxqxry4/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MinnesotaMoose.json" target="_blank">json</a> <b>100%</b><br />
 USA_ChristmasSnowman, <b>updated</b>, 65, <a href="https://www.munzee.com/map/9zvxjdffs/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ChristmasSnowman.json" target="_blank">json</a> <b>100%</b><br />
+USA_MOAYeti, <b>updated</b>, 351, <a href="https://www.munzee.com/map/9zvxjuwtm/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAYeti.json" target="_blank">json</a> <b>100%</b><br />
