--- a/feladat.html
+++ b/feladat.html
@@ -441,3 +441,4 @@ USA_MinnesotaMoose, <b>updated</b>, 376, <a href="https://www.munzee.com/map/9zv
 USA_ChristmasSnowman, <b>updated</b>, 65, <a href="https://www.munzee.com/map/9zvxjdffs/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ChristmasSnowman.json" target="_blank">json</a> <b>100%</b><br />
 USA_MOAYeti, <b>updated</b>, 351, <a href="https://www.munzee.com/map/9zvxjuwtm/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAYeti.json" target="_blank">json</a> <b>100%</b><br />
 USA_MOAFlower, <b>updated</b>, 191, <a href="https://www.munzee.com/map/9zvxjgnp0/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAFlower.json" target="_blank">json</a> <b>100%</b><br />
+USA_MOAElectricMonster, <b>updated</b>, 136, <a href="https://www.munzee.com/map/9zvxn51xy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAElectricMonster.json" target="_blank">json</a> <b>100%</b><br />
