--- a/feladat.html
+++ b/feladat.html
@@ -442,3 +442,4 @@ USA_ChristmasSnowman, <b>updated</b>, 65, <a href="https://www.munzee.com/map/9z
 USA_MOAYeti, <b>updated</b>, 351, <a href="https://www.munzee.com/map/9zvxjuwtm/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAYeti.json" target="_blank">json</a> <b>100%</b><br />
 USA_MOAFlower, <b>updated</b>, 191, <a href="https://www.munzee.com/map/9zvxjgnp0/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAFlower.json" target="_blank">json</a> <b>100%</b><br />
 USA_MOAElectricMonster, <b>updated</b>, 136, <a href="https://www.munzee.com/map/9zvxn51xy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAElectricMonster.json" target="_blank">json</a> <b>100%</b><br />
+Lithuania_VirusBomb, <b>updated</b>, 208, <a href="https://www.munzee.com/map/u9c2h7w98/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_VirusBomb.json" target="_blank">json</a><br />
