--- a/feladat.html
+++ b/feladat.html
@@ -458,3 +458,4 @@ Lithuania_PistachioIceCreamInKaunas, <b>updated</b>, 265, <a href="https://www.m
 Lithuania_KaunasMagnet, <b>updated</b>, 284, <a href="https://www.munzee.com/map/u9c03t0v3/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaunasMagnet.json" target="_blank">json</a><br />
 Lithuania_FebruaryEvent, <b>updated</b>, 62, <a href="https://www.munzee.com/map/u9c03tcwt/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_FebruaryEvent.json" target="_blank">json</a><br />
 USA_TheLuckyFungi, <b>updated</b>, 151, <a href="https://www.munzee.com/map/djf8kbee5/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TheLuckyFungi.json" target="_blank">json</a> <b>100%</b><br />
+USA_SunAndMoon, <b>updated</b>, 15, <a href="https://www.munzee.com/map/dnqgddz23/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SunAndMoon.json" target="_blank">json</a><br />
