--- a/feladat.html
+++ b/feladat.html
@@ -460,3 +460,11 @@ Lithuania_FebruaryEvent, <b>updated</b>, 62, <a href="https://www.munzee.com/map
 USA_TheLuckyFungi, <b>updated</b>, 151, <a href="https://www.munzee.com/map/djf8kbee5/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TheLuckyFungi.json" target="_blank">json</a> <b>100%</b><br />
 USA_SunAndMoon, <b>updated</b>, 15, <a href="https://www.munzee.com/map/dnqgddz23/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SunAndMoon.json" target="_blank">json</a><br />
 USA_LexingtonSurprise, <b>updated</b>, 54, <a href="https://www.munzee.com/map/dnqg4zcny/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LexingtonSurprise.json" target="_blank">json</a><br />
+----csoportok<br />
+----városok<br />
+USA_city_Montgomery, <b>updated</b>, <a href="https://www.munzee.com/map/djf8m22fr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Montgomery.json" target="_blank">json</a><br />
+----felhasználók<br />
+Rikitan_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vyxmx/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_completed.json" target="_blank">json</a><br />
+----témák<br />
+<b>stop</b> - 2022.12.30 15:06:40<br />
+összesen 13067<br />
