--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.12.30 11:28:52<br />
+<b>start</b> - 2022.12.31 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970508<br />
@@ -21,7 +21,7 @@ USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
 UnitedKingdom_LFCBebington, not updated, 0.0<br />
 Finland_Nurmijarvi, not updated, 0.0<br />
-Finland_Hyvinkaa, not updated, 0.30999999999999517<br />
+Finland_Hyvinkaa, not updated, 0.9399999999999977<br />
 USA_CanonCity, not updated, 0.0<br />
 UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
 Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
@@ -415,56 +415,16 @@ USA_MOAChristmasCard kihagyva (100%), <br />
 Germany_AreYouXZeePerienced, not updated, 0.0<br />
 Germany_MixedGardenRT kihagyva (100%), <br />
 Germany_AppenzellerSennenhundRT, not updated, 0.0<br />
-Germany_PatchworkRT, not updated, 0.0<br />
+Germany_PatchworkRT, not updated, 0.12999999999999545<br />
 Germany_FlatsAppenzellerRT, not updated, 0.0<br />
 Germany_WeddingDay kihagyva (100%), <br />
 Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
 Germany_SportparkEvolutionsRT2, not updated, 0.28999999999999204<br />
-Germany_Peace, <b>updated</b>, 3258, <a href="https://www.munzee.com/map/u0we8z9mh/14.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_Peace.json" target="_blank">json</a><br />
+Germany_Peace, not updated, 0.0<br />
 Germany_PatchworkDusslingen, not updated, 0.0<br />
-USA_MunzeeMania2019, <b>updated</b>, 532, <a href="https://www.munzee.com/map/9zvwzxy7x/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MunzeeMania2019.json" target="_blank">json</a><br />
-USA_MOADwarfLeprechaun, <b>updated</b>, 283, <a href="https://www.munzee.com/map/9zvxn73ke/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOADwarfLeprechaun.json" target="_blank">json</a> <b>100%</b><br />
-USA_MOAPenguin, <b>updated</b>, 367, <a href="https://www.munzee.com/map/9zvxn5vvf/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAPenguin.json" target="_blank">json</a> <b>100%</b><br />
-USA_MOANutcracker, <b>updated</b>, 174, <a href="https://www.munzee.com/map/9zvxnhr2r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOANutcracker.json" target="_blank">json</a> <b>100%</b><br />
-USA_IceCreamEagan, <b>updated</b>, 63, <a href="https://www.munzee.com/map/9zvxpct2h/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_IceCreamEagan.json" target="_blank">json</a> <b>100%</b><br />
-Germany_AdlerKatapulte, <b>updated</b>, 132, <a href="https://www.munzee.com/map/u0ws6ed47/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_AdlerKatapulte.json" target="_blank">json</a><br />
-USA_SuperChuckerShield, <b>updated</b>, 543, <a href="https://www.munzee.com/map/9zvwdtx7f/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SuperChuckerShield.json" target="_blank">json</a> <b>100%</b><br />
-USA_DogDaysOfSummer, <b>updated</b>, 217, <a href="https://www.munzee.com/map/9zvx4cm5j/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_DogDaysOfSummer.json" target="_blank">json</a> <b>100%</b><br />
-USA_GingerbreadMan_Edina, <b>updated</b>, 848, <a href="https://www.munzee.com/map/9zvxhphvg/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GingerbreadMan_Edina.json" target="_blank">json</a> <b>100%</b><br />
-USA_NEOneAlien, <b>updated</b>, 230, <a href="https://www.munzee.com/map/cbj8nmyg8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_NEOneAlien.json" target="_blank">json</a><br />
-USA_ComoEvoFlowers, <b>updated</b>, 207, <a href="https://www.munzee.com/map/9zvzb5fqd/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ComoEvoFlowers.json" target="_blank">json</a> <b>100%</b><br />
-USA_WitchHat, <b>updated</b>, 150, <a href="https://www.munzee.com/map/9zvxyf7hg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WitchHat.json" target="_blank">json</a><br />
-USA_LRTEVOTrain, <b>updated</b>, 481, <a href="https://www.munzee.com/map/9zvz8rvx1/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LRTEVOTrain.json" target="_blank">json</a><br />
-USA_JackOZEEacula, <b>updated</b>, 199, <a href="https://www.munzee.com/map/9zvxx1c0y/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_JackOZEEacula.json" target="_blank">json</a> <b>100%</b><br />
-USA_Minnesota, <b>updated</b>, 424, <a href="https://www.munzee.com/map/9zvxqwvpp/14.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Minnesota.json" target="_blank">json</a> <b>100%</b><br />
-USA_MinnesotaMoose, <b>updated</b>, 376, <a href="https://www.munzee.com/map/9zvxqxry4/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MinnesotaMoose.json" target="_blank">json</a> <b>100%</b><br />
-USA_ChristmasSnowman, <b>updated</b>, 65, <a href="https://www.munzee.com/map/9zvxjdffs/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ChristmasSnowman.json" target="_blank">json</a> <b>100%</b><br />
-USA_MOAYeti, <b>updated</b>, 351, <a href="https://www.munzee.com/map/9zvxjuwtm/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAYeti.json" target="_blank">json</a> <b>100%</b><br />
-USA_MOAFlower, <b>updated</b>, 191, <a href="https://www.munzee.com/map/9zvxjgnp0/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAFlower.json" target="_blank">json</a> <b>100%</b><br />
-USA_MOAElectricMonster, <b>updated</b>, 136, <a href="https://www.munzee.com/map/9zvxn51xy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MOAElectricMonster.json" target="_blank">json</a> <b>100%</b><br />
-Lithuania_VirusBomb, <b>updated</b>, 208, <a href="https://www.munzee.com/map/u9c2h7w98/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_VirusBomb.json" target="_blank">json</a><br />
-Lithuania_KaisiadorysHammer, <b>updated</b>, 272, <a href="https://www.munzee.com/map/u9c25u5tp/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaisiadorysHammer.json" target="_blank">json</a> <b>100%</b><br />
-Lithuania_KaisiadorysMiniElectric, <b>updated</b>, 84, <a href="https://www.munzee.com/map/u9c2hhy9b/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaisiadorysMiniElectric.json" target="_blank">json</a> <b>100%</b><br />
-Lithuania_KaisiadorysCrossbow, <b>updated</b>, 142, <a href="https://www.munzee.com/map/u9c2huzrg/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaisiadorysCrossbow.json" target="_blank">json</a> <b>100%</b><br />
-Lithuania_BalticWay30, <b>updated</b>, 226, <a href="https://www.munzee.com/map/u9c2hu8uh/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_BalticWay30.json" target="_blank">json</a> <b>100%</b><br />
-Austria_FrauenkirchenOwl, <b>updated</b>, 118, <a href="https://www.munzee.com/map/u2s01hxq5/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Austria_FrauenkirchenOwl.json" target="_blank">json</a><br />
-Slovakia_SpaceInvaderPrievidza, <b>updated</b>, 83, <a href="https://www.munzee.com/map/u2tjrpt60/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_SpaceInvaderPrievidza.json" target="_blank">json</a> <b>100%</b><br />
-Lithuania_KaunasGreenLeaf, <b>updated</b>, 109, <a href="https://www.munzee.com/map/u9c03mku3/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaunasGreenLeaf.json" target="_blank">json</a> <b>100%</b><br />
-Lithuania_KaunasScatter1, <b>updated</b>, 153, <a href="https://www.munzee.com/map/u9c06nf52/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaunasScatter1.json" target="_blank">json</a> <b>100%</b><br />
-Lithuania_KaunasScatter2, <b>updated</b>, 126, <a href="https://www.munzee.com/map/u9c03wx5s/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaunasScatter2.json" target="_blank">json</a><br />
-Lithuania_KaunasLightning, <b>updated</b>, 235, <a href="https://www.munzee.com/map/u9c03z4uv/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaunasLightning.json" target="_blank">json</a><br />
-Lithuania_RotusesSquareKaunas, <b>updated</b>, 110, <a href="https://www.munzee.com/map/u9bbr99v5/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_RotusesSquareKaunas.json" target="_blank">json</a> <b>100%</b><br />
-Lithuania_PistachioIceCreamInKaunas, <b>updated</b>, 265, <a href="https://www.munzee.com/map/u9c03q762/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_PistachioIceCreamInKaunas.json" target="_blank">json</a> <b>100%</b><br />
-Lithuania_KaunasMagnet, <b>updated</b>, 284, <a href="https://www.munzee.com/map/u9c03t0v3/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaunasMagnet.json" target="_blank">json</a><br />
-Lithuania_FebruaryEvent, <b>updated</b>, 62, <a href="https://www.munzee.com/map/u9c03tcwt/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_FebruaryEvent.json" target="_blank">json</a><br />
-USA_TheLuckyFungi, <b>updated</b>, 151, <a href="https://www.munzee.com/map/djf8kbee5/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TheLuckyFungi.json" target="_blank">json</a> <b>100%</b><br />
-USA_SunAndMoon, <b>updated</b>, 15, <a href="https://www.munzee.com/map/dnqgddz23/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SunAndMoon.json" target="_blank">json</a><br />
-USA_LexingtonSurprise, <b>updated</b>, 54, <a href="https://www.munzee.com/map/dnqg4zcny/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LexingtonSurprise.json" target="_blank">json</a><br />
-----csoportok<br />
-----városok<br />
-USA_city_Montgomery, <b>updated</b>, <a href="https://www.munzee.com/map/djf8m22fr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Montgomery.json" target="_blank">json</a><br />
-----felhasználók<br />
-Rikitan_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vyxmx/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_completed.json" target="_blank">json</a><br />
-----témák<br />
-<b>stop</b> - 2022.12.30 15:06:40<br />
-összesen 13067<br />
+USA_MunzeeMania2019, not updated, 0.0<br />
+USA_MOADwarfLeprechaun kihagyva (100%), <br />
+USA_MOAPenguin kihagyva (100%), <br />
+USA_MOANutcracker kihagyva (100%), <br />
+USA_IceCreamEagan kihagyva (100%), <br />
+Germany_AdlerKatapulte, <b>updated</b>, 135, <a href="https://www.munzee.com/map/u0ws6ed47/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_AdlerKatapulte.json" target="_blank">json</a><br />
