--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2022.12.31 01:10:08<br />
+<b>start</b> - 2023.01.01 01:10:12<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970508<br />
 USA_PrattvilleTrillium, not updated, 0.9199999999999875<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.5399999999999991<br />
-Hungary_VotiveChurch, not updated, -38.74000000000001<br />
+Hungary_VotiveChurch, not updated, -38.61000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.0<br />
@@ -427,7 +427,7 @@ USA_MOADwarfLeprechaun kihagyva (100%), <br />
 USA_MOAPenguin kihagyva (100%), <br />
 USA_MOANutcracker kihagyva (100%), <br />
 USA_IceCreamEagan kihagyva (100%), <br />
-Germany_AdlerKatapulte, <b>updated</b>, 135, <a href="https://www.munzee.com/map/u0ws6ed47/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_AdlerKatapulte.json" target="_blank">json</a><br />
+Germany_AdlerKatapulte, not updated, 0.6799999999999926<br />
 USA_SuperChuckerShield kihagyva (100%), <br />
 USA_DogDaysOfSummer kihagyva (100%), <br />
 USA_GingerbreadMan_Edina kihagyva (100%), <br />
@@ -460,9 +460,5 @@ Lithuania_FebruaryEvent, not updated, 0.0<br />
 USA_TheLuckyFungi kihagyva (100%), <br />
 USA_SunAndMoon, not updated, 0.0<br />
 USA_LexingtonSurprise, not updated, 0.0<br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2022.12.31 01:30:45<br />
-összesen 1236<br />
+<b>stop</b> - 2023.01.01 01:28:26<br />
+összesen 1093<br />
