--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.01.02 01:10:12<br />
+<b>start</b> - 2023.01.03 01:10:10<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970508<br />
 USA_PrattvilleTrillium, not updated, 0.9199999999999875<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.5399999999999991<br />
-Hungary_VotiveChurch, not updated, -38.74000000000001<br />
+Hungary_VotiveChurch, not updated, -38.61000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.0<br />
@@ -69,7 +69,7 @@ Hungary_CsepelVasEsFemmuvekLogo, not updated, 0.0<br />
 Czechia_KMZNAK, not updated, 0.11999999999999034<br />
 Luxembourg_LuxembourgFlag, not updated, 0.0<br />
 USA_MarioFireballVoid, not updated, 0.0<br />
-USA_SpyGoggles, not updated, 0.0<br />
+USA_SpyGoggles, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
 Hungary_Farkas-erdo, not updated, 0.0<br />
 Hungary_CastleOfDiosgyor, not updated, 0.0<br />
 Denmark_GhostInHilleroed, not updated, 0.0<br />
@@ -460,5 +460,5 @@ Lithuania_FebruaryEvent, not updated, 0.0<br />
 USA_TheLuckyFungi kihagyva (100%), <br />
 USA_SunAndMoon, not updated, 0.0<br />
 USA_LexingtonSurprise, not updated, 0.0<br />
-<b>stop</b> - 2023.01.02 01:28:20<br />
-összesen 1088<br />
+<b>stop</b> - 2023.01.03 01:31:19<br />
+összesen 1268<br />
