--- a/feladat.html
+++ b/feladat.html
@@ -2,3 +2,10 @@
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, <b>updated</b>, 1471, <a href="https://www.munzee.com/map/u0vy8h29n/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_TresorICELimburg.json" target="_blank">json</a><br />
+USA_PrattvilleTrillium, not updated, 0.9199999999999875<br />
+Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
+Hungary_TatabanyaBlackhole, not updated, 0.5399999999999991<br />
+Hungary_VotiveChurch, not updated, -38.61000000000001<br />
+Germany_WappenHalberstadt, not updated, 0.0<br />
+UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
+Slovakia_ChristmasStable, <b>updated</b>, 1197, <a href="https://www.munzee.com/map/u2s1uyuvm/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_ChristmasStable.json" target="_blank">json</a> <b>100%</b><br />
