--- a/feladat.html
+++ b/feladat.html
@@ -341,3 +341,130 @@ Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
 USA_StroopwafelInvasionInFallingWaters, not updated, 0.0<br />
 USA_StroopwafelInvasionInHagerstown, not updated, 0.0<br />
 Australia_StroopwafelInvasionInKelmscott, <b>updated</b>, 56, <a href="https://www.munzee.com/map/qd63rd421/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInKelmscott.json" target="_blank">json</a><br />
+UnitedKingdom_StroopwafelInvasionInKingswood, not updated, 0.0<br />
+Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
+Germany_StroopwafelInvasionInMeitingen, not updated, 0.0<br />
+Canada_StroopwafelInvasionInNewWestminster, not updated, 0.0<br />
+Australia_StroopwafelInvasionInNorlane, not updated, 0.0<br />
+Netherlands_StroopwafelInvasionInOspel, not updated, 0.0<br />
+UnitedKingdom_StroopwafelInvasionInThringstone, not updated, 0.0<br />
+Australia_StroopwafelInvasionInWonthaggi, not updated, 0.0<br />
+Netherlands_StroopwafelInvasionInArnhem kihagyva (100%), <br />
+Germany_StroopwafelInvasionInBerlin kihagyva (100%), <br />
+Canada_StroopwafelInvasionInBrossard kihagyva (100%), <br />
+Australia_StroopwafelInvasionInBrownsPlains kihagyva (100%), <br />
+Germany_StroopwafelInvasionInChemnitz kihagyva (100%), <br />
+USA_StroopwafelInvasionInDesertLodge kihagyva (100%), <br />
+USA_StroopwafelInvasionInEscondido kihagyva (100%), <br />
+Canada_StroopwafelInvasionInGeorgetown kihagyva (100%), <br />
+USA_StroopwafelInvasionInGlenOaks kihagyva (100%), <br />
+Sweden_StroopwafelInvasionInGotenborg kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGouda kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGroningen kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInHoofddorp kihagyva (100%), <br />
+USA_StroopwafelInvasionInMHQ kihagyva (100%), <br />
+Australia_StroopwafelInvasionInMorayfield kihagyva (100%), <br />
+Australia_StroopwafelInvasionInOnkaparingaHills kihagyva (100%), <br />
+Australia_StroopwafelInvasionInPerth kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInPlympton kihagyva (100%), <br />
+USA_StroopwafelInvasionInRaleigh kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInBedford kihagyva (100%), <br />
+USA_MHQBash4Casino kihagyva (100%), <br />
+USA_MHQV4Pin kihagyva (100%), <br />
+USA_ZeeKnight, not updated, 0.0<br />
+USA_MichaelMyersHalloween, not updated, 0.0<br />
+USA_MunzeeLogoHistory2011, not updated, 0.0<br />
+USA_MunzeeLogoHistory2013 kihagyva (100%), <br />
+USA_MunzeeLogoHistory2014, not updated, 0.0<br />
+USA_MunzeeLogoHistory2015, not updated, 0.0<br />
+USA_PiratesFlag kihagyva (100%), <br />
+USA_Zelda, not updated, 0.0<br />
+USA_TeenageMutantNinjaTurtles, not updated, 0.0<br />
+Germany_FBombBerlin kihagyva (100%), <br />
+Hungary_FBombBudapest kihagyva (100%), <br />
+USA_FBombCedarRapids kihagyva (100%), <br />
+Denmark_FBombHammel kihagyva (100%), <br />
+USA_FBombMcKinney kihagyva (100%), <br />
+USA_FBombTampa kihagyva (100%), <br />
+USA_RoverPin, not updated, 0.0<br />
+USA_EmeraldInAnchorage kihagyva (100%), <br />
+USA_EmeraldInChesterfield kihagyva (100%), <br />
+USA_EmeraldInMcKinney kihagyva (100%), <br />
+Australia_EmeraldInMelbourne kihagyva (100%), <br />
+UnitedKingdom_EmeraldInGreenwich kihagyva (100%), <br />
+Australia_EmeraldInSydney kihagyva (100%), <br />
+BosniaHerzegovina_PanonskaJezeraTuzla, not updated, 0.0<br />
+Serbia_JapanseMaple kihagyva (100%), <br />
+Greece_TheLighthouseOfChania kihagyva (100%), <br />
+Jersey_JerzeeClan, not updated, 0.0<br />
+Jersey_JerseyColorPaw, not updated, 0.0<br />
+Jersey_StOuen kihagyva (100%), <br />
+Portugal_MadeiraMonumental kihagyva (100%), <br />
+Portugal_LargoDaPaz kihagyva (100%), <br />
+Portugal_1MadeiraSapphiresTwin kihagyva (100%), <br />
+Portugal_Portinho kihagyva (100%), <br />
+Croatia_CroatiaLocketHeart, not updated, 0.0<br />
+Greece_Zakynthos, not updated, 0.0<br />
+Portugal_PortoNovoHighVoltage, not updated, 0.0<br />
+Portugal_HighVoltageMadeiraIslandFirst kihagyva (100%), <br />
+Portugal_HighVoltageMadeiraIslandBlack kihagyva (100%), <br />
+UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
+France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
+Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
+USA_MOAChristmasCard kihagyva (100%), <br />
+Germany_AreYouXZeePerienced, not updated, 0.0<br />
+Germany_MixedGardenRT kihagyva (100%), <br />
+Germany_AppenzellerSennenhundRT, not updated, 0.030000000000001137<br />
+Germany_PatchworkRT, not updated, 0.5899999999999963<br />
+Germany_FlatsAppenzellerRT, not updated, 0.030000000000001137<br />
+Germany_WeddingDay kihagyva (100%), <br />
+Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
+Germany_SportparkEvolutionsRT2, not updated, 0.28999999999999204<br />
+Germany_Peace, not updated, 0.0<br />
+Germany_PatchworkDusslingen, not updated, 0.0<br />
+USA_MunzeeMania2019, not updated, 0.0<br />
+USA_MOADwarfLeprechaun kihagyva (100%), <br />
+USA_MOAPenguin kihagyva (100%), <br />
+USA_MOANutcracker kihagyva (100%), <br />
+USA_IceCreamEagan kihagyva (100%), <br />
+Germany_AdlerKatapulte, not updated, 0.6799999999999926<br />
+USA_SuperChuckerShield kihagyva (100%), <br />
+USA_DogDaysOfSummer kihagyva (100%), <br />
+USA_GingerbreadMan_Edina kihagyva (100%), <br />
+USA_NEOneAlien, not updated, 0.0<br />
+USA_ComoEvoFlowers kihagyva (100%), <br />
+USA_WitchHat, not updated, 0.0<br />
+USA_LRTEVOTrain, not updated, 0.0<br />
+USA_JackOZEEacula kihagyva (100%), <br />
+USA_Minnesota kihagyva (100%), <br />
+USA_MinnesotaMoose kihagyva (100%), <br />
+USA_ChristmasSnowman kihagyva (100%), <br />
+USA_MOAYeti kihagyva (100%), <br />
+USA_MOAFlower kihagyva (100%), <br />
+USA_MOAElectricMonster kihagyva (100%), <br />
+Lithuania_VirusBomb, not updated, 0.0<br />
+Lithuania_KaisiadorysHammer kihagyva (100%), <br />
+Lithuania_KaisiadorysMiniElectric kihagyva (100%), <br />
+Lithuania_KaisiadorysCrossbow kihagyva (100%), <br />
+Lithuania_BalticWay30 kihagyva (100%), <br />
+Austria_FrauenkirchenOwl, not updated, 0.0<br />
+Slovakia_SpaceInvaderPrievidza kihagyva (100%), <br />
+Lithuania_KaunasGreenLeaf kihagyva (100%), <br />
+Lithuania_KaunasScatter1 kihagyva (100%), <br />
+Lithuania_KaunasScatter2, not updated, 0.0<br />
+Lithuania_KaunasLightning, not updated, 0.0<br />
+Lithuania_RotusesSquareKaunas kihagyva (100%), <br />
+Lithuania_PistachioIceCreamInKaunas kihagyva (100%), <br />
+Lithuania_KaunasMagnet, not updated, 0.0<br />
+Lithuania_FebruaryEvent, not updated, 0.0<br />
+USA_TheLuckyFungi kihagyva (100%), <br />
+USA_SunAndMoon, not updated, 0.0<br />
+USA_LexingtonSurprise, not updated, 0.0<br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+----témák<br />
+World_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/World_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Australia_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/r1ps2ge1w/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+<b>stop</b> - 2023.01.09 01:28:31<br />
+összesen 1103<br />
